<resources>
    <string name="app_name">speedtracker</string>
    <string name="login">Login</string>

    <!--Login Page-->
    <string name="emaill">Email</string>
    <string name="passwordl">Password</string>
    <string name="showPassword">Show Password</string>
    <string name="createone">No Account Yet?Create one!</string>
    <string name="Login1">Login</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="title_activity_settings">Settings</string>

    <!-- for the signup page -->
    <string name="Signup">Signup</string>
    <string name="backbutton">Back</string>
    <string name="CreateAccount">Create Account</string>
    <string name="fnamehint">Enter Your First Name</string>
    <string name="lnamehint">Enter Your Last Name</string>
    <string name="emailhint">Enter Email</string>
    <string name="passwordhint">Enter A Password</string>
    <string name="passwordhint2">Retype Password</string>

    <!--Strings for Tracking Page-->
    <string name="Tracking_page">Tracking Page</string>
    <string name="google_maps">Google Maps</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Current_Speed">Current Speed :</string>
    <string name="Current_Distance_Travelled">Current Distance Travelled :</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="reset">Reset</string>

    <!-- for the aboutus page -->
    <string name="name1">Karan Raj Kanwar</string>
    <string name="AboutUs">About Us </string>
    <string name="name2">Zhill Patel</string>
    <string name="karanquote">"It's always fun to pick on the nerd.....Until he has your IP address."</string>
    <string name="zhillquote">But are you a different animal and the same beast?</string>
    <string name="karanpara">"Karan Raj is a 3rd year Humber College student who enjoys app development, web design and databasing. His hobbies consist of playing competitive games, anything automotive based such as working on cars and drinking iced coffee's just to keep the blood pumping!"</string>
    <string name="zhillpara">Zhill Patel is a 3rd year Computer Engineering student at Humber College who is interesting in app design. He is a guy who enjoys and loves the game of basketball and is an avid Toronto sports fan.</string>

    <!-- for the forgot password page -->
    <string name="Email">Email :</string>
    <string name="verified_email"></string>
    <string name="disclaimer">If you forgot your password please type in your email address as we send a temporary password to your email.Once you have access to your account, you can request a new password.</string>
    <string name="Send_link">Send Link</string>

    <!--Strings for Nav Bar-->
    <string name="Speed_Tracker">Speed Tracker</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Login">Login</string>
    <string name="Forgot_password">Forgot Password</string>
    <string name="About_Us">About Us</string>
    <string name="Data_logs">Data Logs</string>
    <string name="Settings">Settings</string>
    <string name ="Sign_Out">Sign Out</string>
    <string name="Quit">Quit</string>>

    <!-- for the Log page -->
    <string name="Logs">Logs</string>
    <string name="Select_all_logs">Select all logs</string>
    <string name="Filter_By">Filter By :</string>
    <string name="Delete_all_selected">Delete All Selected</string>
    <string name="Share_Save_selected">Share/Save Selected</string>

    <!-- Strings related to Quit -->
<!-- <string name="Quit">Quit</string>-->
</resources>
