<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="Navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/Tracking"
            android:icon="@drawable/ic_tracking"
            android:title="@string/Speed_Tracker"/>
        <item android:id="@+id/logs"
            android:icon="@drawable/ic_logs"
            android:title="@string/Data_logs"/>
        <item android:id="@+id/Aboutus"
            android:icon="@drawable/ic_aboutus"
            android:title="@string/About_Us"/>
        <item android:id="@+id/Settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/Settings"/>
        <item android:id="@+id/Sign_Out"
            android:icon="@drawable/ic_exit"
            android:title="@string/Sign_Out"/>
    </group>
</menu>
