<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:layout_editor_absoluteY="81sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24sp"
        android:paddingTop="60sp"
        android:paddingRight="24sp"
        android:paddingBottom="60sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="103sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40sp"
            android:src="@drawable/ic_login2" />

        <!-- Email Label -->
        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp"
            android:hint="@string/emaill"
            android:inputType="textEmailAddress" />


        <!-- Password Label -->
        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp"
            android:hint="@string/passwordl"
            android:inputType="textPassword" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showPassword"
            tools:layout_editor_absoluteX="16sp"
            tools:layout_editor_absoluteY="179sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:onClick="onClick"
            android:text="@string/Login1" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="40sp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/createone"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="fill_parent"
            android:layout_height="40sp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/forgotpass"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>