<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20sp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:color="#000000"
        android:padding="10sp"
        android:text="@string/disclaimer"
        android:textSize="17sp" />


        <EditText
            android:id="@+id/input_email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="150sp"
        android:color="#ff0000" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="52dp"
            android:color="#000000"
            android:padding="20sp"
            android:text="@string/login"
            android:textSize="15sp"
            android:textStyle="normal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="52dp"
            android:layout_marginRight="15sp"
            android:color="#000000"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/Send_link"
            android:textSize="15sp"
            android:textStyle="normal" />
    </RelativeLayout>
</LinearLayout>